<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/title"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/doctorbuttonid"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/doctor" />
        <Button
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/appointment"
            android:id="@+id/appointid"/>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/serviceid"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"

            android:text="@string/service" />
        <Button
            android:id="@+id/confirmationid"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirmation" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="70dp"
            android:layout_marginLeft="30dp"
            android:layout_width="350dp"
            android:layout_height="280dp"
            android:src="@drawable/doctor"/>

    </LinearLayout>


</LinearLayout>




